fix!: solve compilation errors caused by smooks-core breaking changes
Refs: smooks/smooks@5efc454